pkg/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cos-opa
  labels:
    app: cos-opa
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: cos-opa
