pkg/deploy/k8s/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "cos-webhook.weimob.devops"
webhooks:
  - name: "cos-webhook.weimob.devops"
    namespaceSelector:
      matchLabels:
        admission-webhook: enabled
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE","DELETE"]
        resources: ["pods"]
        scope: "Namespaced"
    clientConfig:
#       service:
#         namespace: cos-opa
#         name: cos-webhook
#         path: /validate
#         port: 443
      url: https://192.168.118.1:443/validate
      admissionReviewVersions: ["v1"]
      sideEffects: None
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIekNDQWdlZ0F3SUJBZ0lVY203U1hTa2Y5
[...]
        LS0K
